# growin-app

./: .agents.md  .continue-here.md  .cursorrules  .gitignore  .gsd_context.md  2-UAT.md  42-01-model-performance-comparison.md  AGENTS.md  ARCHITECTURE.md  FIXES_APPLIED.md  IMPROVEMENTS.md  MAS_Strategy.md  PROJECT_RULES.md  README.md  TODO.md  baseline_results.txt  chat_test_output.json  coordinator_agent_with_lines.txt  debug_file.py  debug_startup_jules.py  diff.txt  docker-compose.yml  final_perf.patch  fix2.py  fix_jmce.py  fix_test.py  jules_ci_fix.patch  jules_wrapper.py  opencode.json  palette_fix.patch  patch.diff  patch.py  patch_analytics_db.py  patch_analytics_db_2.py  patch_analytics_db_3.py  patch_analytics_db_4.py  patch_chat.py  patch_chat_endpoints.py  patch_colors.py  patch_data_engine.py  (+35 more)
backend/: .env-missing-keys-template  .gitignore  .mypy.ini  .pylintrc  Dockerfile  README.md  analytics_db.py  analytics_db.py.orig  analytics_db.py.rej  app_context.py  app_logging.py  architecture_evolution.md  base_agent.py  cache_manager.py  chat_manager.py  conftest.py  coordinator_agent.py  coreml_inference.py  currency_normalizer.py  currency_utils.py  data_engine.py  data_fabricator.py  data_models.py  decision_agent.py  dividend_bridge.py  docker_mcp_server.py  dump_t212_raw.py  error_resilience.py  forecast_bridge.py  forecaster.py  huggingface_mcp_server.py  lm_studio_client.py  market_context.py  mcp_client.py  memory_guard.py  mlx_engine.py  mlx_langchain.py  mlx_vlm_engine.py  model_config.py  price_validation.py  (+24 more)
backend/agents/: __init__.py  ace_evaluator.py  base_agent.py  calibration_agent.py  clara_agent.py  coordinator_agent.py  coordinator_agent.py.orig  decision_agent.py  dividend_agent.py  forecasting_agent.py  geopolitical_agent.py  goal_planner_agent.py  governance.py  llm_factory.py  math_generator_agent.py  messenger.py  orchestrator.py  orchestrator_agent.py  portfolio_agent.py  ppo_agent.py  quant_agent.py  regime_agent.py  research_agent.py  risk_agent.py  rl_policy.py  rl_state.py  rl_utils.py  social_agent.py  swarm_utils.py  vision_agent.py  whale_agent.py
backend/backtest_lab/: run_comparison.py
backend/benchmarks/: benchmark_n_plus_1.py
backend/fallbacks/: ml_forecaster.py
backend/growin_core/: Cargo.toml
backend/growin_core_src/: pyproject.toml
backend/models/: neural_ode.py
backend/prompts/: news_query.md
backend/routes/: additional_routes.py  agent_routes.py  ai_routes.py  alpha_routes.py  chart_routes.py  chat_routes.py  chat_routes.py.orig  market_routes.py  mcp_routes.py  status_routes.py
backend/tests/: benchmark_portfolio.py  benchmark_suite.py  (+49 more)
(+673 files in other folders)
