[project]
name = "trading212-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Trading 212 API integration"
authors = [{name = "Trading212 MCP"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["trading212_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
